<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderConfirmationActivity">




    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/_9575cd"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <TextView
        android:id="@+id/tv_order_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_0_00_1"
        android:textSize="@dimen/_24sp"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/_16dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />





    <EditText
        android:id="@+id/et_phone"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_phone_number"
        android:layout_marginBottom="@dimen/_16dp"
        android:inputType="phone"
        app:layout_constraintTop_toBottomOf="@id/tv_order_total"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <CheckBox
        android:id="@+id/cb_need_cutlery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/need_cutlery"
        android:layout_marginBottom="@dimen/_16dp"
        app:layout_constraintTop_toBottomOf="@id/et_phone"
        app:layout_constraintStart_toStartOf="parent" />


    <EditText
        android:id="@+id/et_remarks"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:hint="@string/add_remarks"
        android:layout_marginBottom="@dimen/_16dp"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/cb_need_cutlery"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />







    <Button
        android:id="@+id/btn_submit_order"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:text="@string/submit_order"
        android:layout_marginTop="@dimen/_16dp"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/et_remarks"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <TextView
        android:id="@+id/tv_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Maximum waiting time : 45 minutes"
        android:textSize="@dimen/_18sp"
        android:layout_marginTop="@dimen/_16sp"
        app:layout_constraintTop_toBottomOf="@id/btn_submit_order"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />





</androidx.constraintlayout.widget.ConstraintLayout>
